--- a/clouldbuild.yaml
+++ b/clouldbuild.yaml
@@ -1,13 +1,4 @@
 steps:
-- name: 'docker.io/library/python:3.7'
-  id: Test
-  entrypoint: /bin/sh
-  args:
-  - -c
-  - 'pip install pytest && pip install -r requirements.txt && pytest test/*_test.py'
-- name: gcr.io/google.com/cloudsdktool/cloud-sdk
-  id: Deploy
-  entrypoint: bash
-  args: [ '-c', 'if [ "$BRANCH_NAME" == "master" ]; then echo "$BRANCH_NAME" && gsutil -m rsync -d -r ./dags gs://${_COMPOSER_BUCKET}/dags; else echo "Working on $BRANCH_NAME"; fi']
-substitutions:
-    _COMPOSER_BUCKET: us-central1-data-pipeline-c-a111b6a7-bucket
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/dataflow-bq-321500/my-image', '.']
+  timeout: 500s
