--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,7 +12,7 @@ steps:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=us-central1-data-pipeline-c-a111b6a7-gke'
 options:
-    machineType: 'n1-standard-1'
+    machineType: 'N1_HIGHCPU_8'
 timeout: 660s
 tags: ['mytag1', 'mytag2']
 images: ['gcr.io/dataflow-bq-321500/myimage']
