--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,16 +3,16 @@ steps:
   args: ['build', '-t', 'gcr.io/dataflow-bq-321500/my-image', '.']
   timeout: 500s
 
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/my-project/my-image']
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['push', 'gcr.io/my-project/my-image']
 
-- name: 'gcr.io/cloud-builders/kubectl'
-  args: ['set', 'image', 'deployment/my-deployment', 'my-container=gcr.io/dataflow-bq-321500/my-image']
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=us-central1-data-pipeline-c-a111b6a7-gke'
-options:
-    machineType: 'N1_HIGHCPU_8'
-timeout: 660s
-tags: ['mytag1', 'mytag2']
-images: ['gcr.io/dataflow-bq-321500/myimage']
+# - name: 'gcr.io/cloud-builders/kubectl'
+#   args: ['set', 'image', 'deployment/my-deployment', 'my-container=gcr.io/dataflow-bq-321500/my-image']
+#   env:
+#   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
+#   - 'CLOUDSDK_CONTAINER_CLUSTER=us-central1-data-pipeline-c-a111b6a7-gke'
+# options:
+#     machineType: 'N1_HIGHCPU_8'
+# timeout: 660s
+# tags: ['mytag1', 'mytag2']
+# images: ['gcr.io/dataflow-bq-321500/myimage']
