--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
-# - name: 'docker.io/library/python:3.7'
-#   id: Test
-#   entrypoint: /bin/sh
-#   args:
-#   - -c
-#   - 'pip install pytest && pip install -r requirements.txt && pytest test/*_test.py'
+- name: 'docker.io/library/python:3.7'
+  id: Test
+  entrypoint: /bin/sh
+  args:
+  - -c
+  - 'pip install pytest && pip install -r requirements.txt && pytest test/*_test.py'
 - name: gcr.io/google.com/cloudsdktool/cloud-sdk
   id: Deploy
   entrypoint: bash
